--- a/style.css
+++ b/style.css
@@ -1,4 +1,35 @@
 body {
     display: flex;
     flex-direction: column;   
+    margin: 0;
+    min-height: 100vh;
+}
+
+.section1 {
+    background-color: #1f2937;
+    color: white;
+    
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+    gap: 16px;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(216, 213, 213);
+}
+
+.container1 {
+    display: flex;
+    justify-content: center;
 }
