--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html * {
     font-family: sans-serif;
+    /* border: 1px solid black; */
 }
 
 body {
@@ -13,6 +14,10 @@ body {
     background-color: #1f2937;
     color: white;
     
+}
+
+.section3 {
+    background-color: #b3b7bf;
 }
 
 .header {
@@ -35,7 +40,7 @@ body {
     margin: 5px 0px 10px 0px;
 }
 
-button.header-button {
+.header-button {
     color: white;
     background-color: #3882F6;
     padding: 7px 22px;
@@ -77,4 +82,37 @@ a {
 .mini-container2 img{
     width: 500px;
     height: 350px;
+}
+
+
+.picture-title {
+    font-size: 26px;
+    font-weight: bolder;
+    text-align: center;
+    margin: 40px 0px 40px 0px;
+}
+
+.picture-container img{
+    width: 200px;
+    border-radius: 14px;
+    border-color: #3882F6;
+    border-style: solid;
+    border-width: 2px;
+}
+
+.picture-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+.picture-container img {
+    display: block;
+    margin: 0 auto;
+}
+
+.picture-text {
+    text-align: center;
+    width: 250px;
+    margin: 10px 0px;
 }
